hphp/hack/test/typecheck/reactive/print_in_rx3.php.exp
File "print_in_rx3.php", line 7, characters 3-9:
`echo` or `print` are not allowed in reactive functions. (Typing[4226])
