hphp/hack/test/typecheck/reactive/print_in_rx3.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

<<__RxShallow>>
function f(): void {
  // should be error
  print 1;
}
